# agent-platform

./: .gitignore  README.md  exports.sh.sample  nav.md
sdk/: README.md  pyproject.toml
sdk/agent_platform_sdk/: __init__.py
services/backend/: Dockerfile  pyproject.toml
services/backend/agentplatform/: agents.py  agentspec.py  api_main.py  apikeys.py  config.py  connectors.py  conversation.py  conversation_ingest.py  db.py  dispatcher.py  dispatcher_main.py  events.py  github.py  githubapp.py  gitservice.py  ingest.py  joblauncher.py  materialize.py  pruning.py  recorder.py  recorder_main.py  scheduler.py  secrets.py  skills.py  tiers.py
services/backend/agentplatform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/backend/agentplatform/api/: agents.py  apikeys.py  app.py  audit.py  (+16 more)
services/backend/tests/: conftest.py  test_agent_config_editor.py  test_agent_invoke.py  test_agents.py  test_agents_quickedit.py  test_api_main.py  test_apikeys.py  test_audit.py  test_auth.py  test_config.py  test_conversations.py  test_db.py  test_dispatcher.py  test_dlq_api.py  test_events.py  test_freeform_edit.py  test_github.py  test_githubapp.py  test_gitservice.py  test_health_api.py  test_integrations.py  test_joblauncher.py  test_jobs.py  test_kafka_foundation.py  test_memory_api.py  test_metrics_api.py  test_pruning.py  test_pulls.py  test_rbac.py  test_recorder.py  test_run_annotate.py  test_run_key_revocation.py  test_runs_api.py  test_scheduler.py  test_schedules_api.py  test_sdk.py  test_secrets.py  test_skills.py  test_tail.py  test_tiers.py  (+1 more)
(+95 files in other folders)
