[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-platform-sdk"
version = "0.1.0"
description = "Tiny, dependency-free Python client for the agent-platform HTTP API"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["agent_platform_sdk"]
