[project]
name = "agentplatform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29", "aiosqlite>=0.20", "aiokafka>=0.11", "kubernetes>=30.1",
  "pydantic-settings>=2.4", "argon2-cffi>=23.1", "itsdangerous>=2.2",
  "pyyaml>=6.0", "websockets>=12.0", "pyjwt[crypto]>=2.9", "croniter>=3.0",
]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["agentplatform*"]
